fix: responsive issues with overflowing content

--- a/src/app/(home)/_sections/About.module.css
+++ b/src/app/(home)/_sections/About.module.css
@@ -3,6 +3,7 @@
 	font-family: var(--font-poppins);
 	display: flex;
 	justify-content: center;
+	overflow: hidden;
 }
 
 .aboutContent {
