--- a/src/app/(home)/_sections/Gallery.module.css
+++ b/src/app/(home)/_sections/Gallery.module.css
@@ -1,6 +1,7 @@
 .gallerySection {
 	width: 100%;
 	position: relative;
+	overflow: hidden;
 }
 
 .galleryContent {
