--- a/src/app/(home)/_sections/Hero.module.css
+++ b/src/app/(home)/_sections/Hero.module.css
@@ -4,6 +4,7 @@
 	overflow: hidden;
 	padding-block: 10rem 5rem;
 	position: relative;
+	overflow: hidden;
 }
 
 .heroContent {
@@ -44,6 +45,7 @@
 
 .heroText {
 	width: fit-content;
+	max-width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-self: flex-end;
