--- a/src/components/layout/header/Header.module.css
+++ b/src/components/layout/header/Header.module.css
@@ -7,6 +7,7 @@
 	justify-content: space-between;
 	align-items: center;
 	padding-block: 2rem;
+	overflow: hidden;
 
 	@media (width > 1536px) {
 		max-width: 1840px;
